k8s/frontend/base/istio/authorizationpolicy/allow-ingress-authorization-policy.yaml

apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-ingress-to-frontend
spec:
  selector:
    matchLabels:
      io.kompose.service: paralog-frontend
  action: ALLOW
  rules:
    - from:
        - source:
            principals: ["PLACE_HOLDER"]
      to:
        - operation:
            methods: ["GET","POST"]
      when:
       - key: request.auth.claims[groups]
         values:
             - paralog_access
